# FedCampus_Flutter

./: .gitattributes  .gitignore  README.md  requirements.txt
.github/workflows/: black.yml  django_test.yml  flutter-android.yml  flutter-ios.yml  flutter.yml  intellij-formatting.yml
fa_backend/: fa_backend_uwsgi.ini  manage.py  notification.py  notification_test.py  pyproject.toml  requirements.txt  shell.py  test.py
fa_backend/api/: admin.py  models.py  serializers.py  test_models.py  test_views.py  tests.py  urls.py  views copy.py  views.py
fa_backend/api/migrations/: 0001_initial.py  0002_alter_record_data_alter_record_date.py  0003_rename_data_record_exercisedata.py  0004_record_healthdata.py  0005_sleeptime.py  0006_rename_exercisedata_record_data_and_more.py  0007_record_datatype.py  0008_customer.py  0009_alter_customer_avator_recorddp.py  0010_record_value.py  0011_recorddp_value.py  0012_remove_record_data_remove_recorddp_data.py  0013_customer_netid.py  0014_log.py  0015_alter_log_file_alter_log_user.py  0016_record_update_recorddp_update_alter_log_file.py  0017_customer_faculty_customer_male_customer_student.py  0018_customer_version.py  0019_customer_credit.py
fa_backend/backend/: credit.py  serializers.py  tasks.py  urls.py  views.py
fa_backend/backend/celery/: app.py  celerybeat-schedule.dir
fa_backend/backend/celery/email_helper/: __init__.py  config.py  creditAlert.py  loginAlert.py
fa_backend/backend/templates/: main.html
fa_backend/backend_client/: credit.py  visualization.py
fa_backend/doc/: guide.md
fa_backend/fedapp/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
fa_backend/model/: regression_toy.py
fa_backend/pages/: views.py
fa_backend/pages/templates/: backend_vis.html
fa_backend/scripts/: Active_User_Statistics  get_data.py
fa_backend/send_email/: README.md  box.txt  formwork.py  main.py  reminder.txt  waitlist.txt
fa_backend/test/: populate_customer.py
fa_backend/utility/: timer.py
fedcampus/: README.md  android_build.sh  gen_pigeons.sh  makefile  pigeon_src.dart  pubspec.yaml
fedcampus/android/: build.gradle  gradle.properties  key.properties  settings.gradle
fedcampus/android/app/: agconnect-services.json  build.gradle
fedcampus/doc/: android_user_guide.md  changelog.md  guide.md  ios_user_guide.md
fedcampus/ios/: Podfile
fedcampus/ios/Runner/: Info-Debug.plist  Info-Release.plist  Info.plist
fedcampus/ios/Runner.xcodeproj/: project.pbxproj
fedcampus/lib/: main.dart  utils.dart
fedcampus/lib/l10n/: app_en.arb  app_ja.arb  app_zh.arb
fedcampus/test/: widget_test.dart
google_fit_test_flutter/: README.md  pubspec.yaml
google_fit_test_flutter/lib/: google_health_data_handler.dart  health.dart  main.dart
google_fit_test_flutter/linux/: CMakeLists.txt  my_application.cc
google_fit_test_flutter/test/: widget_test.dart
google_fit_test_flutter/web/: index.html  manifest.json
google_fit_test_flutter/windows/: CMakeLists.txt
test_fa_backend/: README.md
test_fa_backend/test_fa_backend/: manage.py
(+146 files in other folders)
